--- a/v1.7/alpine/Dockerfile
+++ b/v1.7/alpine/Dockerfile
@@ -24,6 +24,7 @@ RUN apk update \
  && gem install bigdecimal -v 1.3.5 \
  && gem install fluent-plugin-s3 -v 1.2.0 \
  && gem install fluent-plugin-aws-elasticsearch-service -v 2.1.0 \
+ && gem install fluent-plugin-kubernetes_metadata_filter -v 1.2.2 \
  && apk del .build-deps \
  && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
 
